Added some html pages and images

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -136,6 +136,11 @@
      </a>
     </li>
     <li>
+     <a href="roland_swiftwind.jpg">
+      roland swiftwind.jpg
+     </a>
+    </li>
+    <li>
      <a href="seraphina_lightbringer.jpg">
       seraphina lightbringer.jpg
      </a>
@@ -143,6 +148,11 @@
     <li>
      <a href="seraphina_thornvale.jpg">
       seraphina thornvale.jpg
+     </a>
+    </li>
+    <li>
+     <a href="silas_shadowvale.jpg">
+      silas shadowvale.jpg
      </a>
     </li>
     <li>
@@ -158,6 +168,11 @@
     <li>
      <a href="valen_shadowborn.jpg">
       valen shadowborn.jpg
+     </a>
+    </li>
+    <li>
+     <a href="zadarin_stard_iro.jpg">
+      zadarin stard iro.jpg
      </a>
     </li>
    </ul>
