--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -136,6 +136,11 @@
      </a>
     </li>
     <li>
+     <a href="roland_swiftwind.html">
+      roland swiftwind
+     </a>
+    </li>
+    <li>
      <a href="seraphina_lightbringer.html">
       seraphina lightbringer
      </a>
@@ -143,6 +148,11 @@
     <li>
      <a href="seraphina_thornvale.html">
       seraphina thornvale
+     </a>
+    </li>
+    <li>
+     <a href="silas_shadowvale.html">
+      silas shadowvale
      </a>
     </li>
     <li>
@@ -158,6 +168,11 @@
     <li>
      <a href="valen_shadowborn.html">
       valen shadowborn
+     </a>
+    </li>
+    <li>
+     <a href="zadarin_stard_iro.html">
+      zadarin stard iro
      </a>
     </li>
     <li>
@@ -246,6 +261,11 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/roland_swiftwind.jpg">
+      img/roland_swiftwind.jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/seraphina_lightbringer.jpg">
       img/seraphina_lightbringer.jpg
      </a>
@@ -253,6 +273,11 @@
     <li>
      <a class="image-index-link" href="img/seraphina_thornvale.jpg">
       img/seraphina_thornvale.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/silas_shadowvale.jpg">
+      img/silas_shadowvale.jpg
      </a>
     </li>
     <li>
@@ -268,6 +293,11 @@
     <li>
      <a class="image-index-link" href="img/valen_shadowborn.jpg">
       img/valen_shadowborn.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/zadarin_stard_iro.jpg">
+      img/zadarin_stard_iro.jpg
      </a>
     </li>
    </ul>
