--- a/campaign/lore/guilds/Wanderers_Guild.html
+++ b/campaign/lore/guilds/Wanderers_Guild.html
@@ -117,5 +117,67 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-list">
+   <h3>
+    The Wanderers Guild Hierarchy
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Grand Archivist: The esteemed leader of the Wanderers Guild, responsible for overseeing the entire organization, making strategic decisions, and preserving the guild's ancient knowledge and traditions.
+     </li>
+     <li>
+      Council of Elders: A group of experienced and respected members who advise the Grand Archivist, offering wisdom and guidance in matters concerning the guild's direction, rituals, and important decisions.
+     </li>
+     <li>
+      Expedition Masters (Wanderers): Seasoned members entrusted with leading expeditions and quests in search of hidden knowledge. They organize and oversee the guild's exploratory endeavors, ensuring the safety and success of each mission.
+     </li>
+     <li>
+      Lorekeepers: Skilled scholars and researchers who diligently collect, organize, and document the acquired knowledge and discoveries of the guild. They are responsible for maintaining the guild's extensive library and archives, safeguarding the wealth of information amassed by the Wanderers.
+     </li>
+     <li>
+      Knowledge Seekers: Active members who dedicate themselves to the pursuit of new knowledge and ancient secrets. They explore various realms, interact with different cultures, and uncover hidden lore, contributing to the collective understanding of the guild.
+     </li>
+     <li>
+      Mindlink Adepts: Highly trained members proficient in the art of telepathic communication within the guild's network. They facilitate the exchange of information, ensuring smooth communication among members and coordinating efforts for shared goals.
+     </li>
+     <li>
+      Initiate Scholars: Newly accepted members who undergo training and apprenticeships within the guild. They are guided by experienced mentors as they develop their magical abilities, learn the guild's rituals, and gain proficiency in the ways of the Wandering Wanderers.
+     </li>
+     <li>
+      Support Enchanters: Skillful enchanters and artificers who provide magical support to the guild, creating enchanted items, protective charms, and useful tools for expeditions and members' endeavors.
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Wanderers Guild Members
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Council of Elders:
+      <a href="../../characters/non-player/zadarin_stard_iro.html">
+       zadarin stard iro
+      </a>
+     </li>
+     <li>
+      Expedition Master (Wanderers):
+      <a href="../../characters/non-player/roland_swiftwind.html">
+       roland swiftwind
+      </a>
+     </li>
+     <li>
+      Expedition Master (Wanderers):
+      <a href="../../characters/non-player/silas_shadowvale.html">
+       silas shadowvale
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
